// Original file: src/zetasql/protos/zetasql/public/formatter_options.proto


export interface FormatterOptionsProto {
  'newLineType'?: (string);
  'lineLengthLimit'?: (number);
  'indentationSpaces'?: (number);
  'allowInvalidTokens'?: (boolean);
  'capitalizeKeywords'?: (boolean);
  'preserveLineBreaks'?: (boolean);
  'expandFormatRanges'?: (boolean);
  'enforceSingleQuotes'?: (boolean);
  'capitalizeFunctions'?: (boolean);
}

export interface FormatterOptionsProto__Output {
  'newLineType': (string);
  'lineLengthLimit': (number);
  'indentationSpaces': (number);
  'allowInvalidTokens': (boolean);
  'capitalizeKeywords': (boolean);
  'preserveLineBreaks': (boolean);
  'expandFormatRanges': (boolean);
  'enforceSingleQuotes': (boolean);
  'capitalizeFunctions': (boolean);
}
